// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EscrowSettlementCard > matches snapshot in error state 1`] = `
<DocumentFragment>
  <div
    class="w-full max-w-md rounded-3xl border border-slate-200 bg-white/80 p-6 shadow-xl backdrop-blur-sm"
  >
    <div
      class="flex items-center justify-between"
    >
      <div
        aria-hidden="true"
        class="animate-shimmer rounded-md h-4 w-full"
        data-testid="skeleton"
        style="width: 100px; height: 24px;"
      />
      <div
        aria-hidden="true"
        class="animate-shimmer rounded-md h-4 w-full"
        data-testid="skeleton"
        style="width: 80px; height: 24px;"
      />
    </div>
    <div
      class="mt-8 space-y-2"
    >
      <div
        aria-hidden="true"
        class="animate-shimmer rounded-md h-4 w-full"
        data-testid="skeleton"
        style="width: 60%; height: 48px;"
      />
      <div
        aria-hidden="true"
        class="animate-shimmer rounded-md h-4 w-full"
        data-testid="skeleton"
        style="width: 40%; height: 20px;"
      />
    </div>
    <div
      class="mt-8"
    >
      <div
        aria-hidden="true"
        class="animate-shimmer rounded-md h-4 w-full"
        data-testid="skeleton"
        style="width: 100%; height: 16px;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`EscrowSettlementCard > matches snapshot in funded state 1`] = `
<DocumentFragment>
  <div
    class="group relative w-full max-w-md overflow-hidden rounded-3xl border border-slate-200 bg-white p-6 shadow-xl transition-all duration-500 hover:shadow-2xl"
  >
    <div
      class="absolute -right-20 -top-20 h-64 w-64 rounded-full bg-indigo-50/50 blur-3xl transition-all duration-700 group-hover:bg-indigo-100/50"
    />
    <div
      class="relative"
    >
      <div
        class="flex items-center justify-between"
      >
        <span
          class="text-xs font-bold uppercase tracking-widest text-slate-400"
        >
          Escrow State
        </span>
        <span
          class="status-badge status-badge--blue"
          data-testid="escrow-status-badge"
        >
          <span>
            Funded
          </span>
        </span>
      </div>
      <div
        class="mt-8"
      >
        <div
          class="flex items-baseline gap-2"
        >
          <span
            class="text-5xl font-black tracking-tight text-slate-900"
          >
            100.50
          </span>
          <span
            class="text-xl font-bold text-slate-400"
          >
            XLM
          </span>
        </div>
        <p
          class="mt-1 text-sm font-medium text-slate-500"
        >
          Current Balance
        </p>
      </div>
      <div
        class="mt-8 flex items-center justify-between border-t border-slate-100 pt-6"
      >
        <div
          class="flex items-center gap-2 text-slate-400"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-refresh-cw h-3 w-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 12a9 9 0 0 1 9-9 9.75 9.75 0 0 1 6.74 2.74L21 8"
            />
            <path
              d="M21 3v5h-5"
            />
            <path
              d="M21 12a9 9 0 0 1-9 9 9.75 9.75 0 0 1-6.74-2.74L3 16"
            />
            <path
              d="M8 16H3v5"
            />
          </svg>
          <span
            class="text-[11px] font-semibold uppercase tracking-wider"
          >
            Updated 0 seconds ago
          </span>
        </div>
        <div
          class="h-1.5 w-1.5 rounded-full bg-emerald-500 shadow-[0_0_8px_rgba(16,185,129,0.6)]"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EscrowSettlementCard > matches snapshot in loading state 1`] = `
<DocumentFragment>
  <div
    class="w-full max-w-md rounded-3xl border border-slate-200 bg-white/80 p-6 shadow-xl backdrop-blur-sm"
  >
    <div
      class="flex items-center justify-between"
    >
      <div
        aria-hidden="true"
        class="animate-shimmer rounded-md h-4 w-full"
        data-testid="skeleton"
        style="width: 100px; height: 24px;"
      />
      <div
        aria-hidden="true"
        class="animate-shimmer rounded-md h-4 w-full"
        data-testid="skeleton"
        style="width: 80px; height: 24px;"
      />
    </div>
    <div
      class="mt-8 space-y-2"
    >
      <div
        aria-hidden="true"
        class="animate-shimmer rounded-md h-4 w-full"
        data-testid="skeleton"
        style="width: 60%; height: 48px;"
      />
      <div
        aria-hidden="true"
        class="animate-shimmer rounded-md h-4 w-full"
        data-testid="skeleton"
        style="width: 40%; height: 20px;"
      />
    </div>
    <div
      class="mt-8"
    >
      <div
        aria-hidden="true"
        class="animate-shimmer rounded-md h-4 w-full"
        data-testid="skeleton"
        style="width: 100%; height: 16px;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`EscrowSettlementCard > matches snapshot in settled state 1`] = `
<DocumentFragment>
  <div
    class="group relative w-full max-w-md overflow-hidden rounded-3xl border border-slate-200 bg-white p-6 shadow-xl transition-all duration-500 hover:shadow-2xl"
  >
    <div
      class="absolute -right-20 -top-20 h-64 w-64 rounded-full bg-indigo-50/50 blur-3xl transition-all duration-700 group-hover:bg-indigo-100/50"
    />
    <div
      class="relative"
    >
      <div
        class="flex items-center justify-between"
      >
        <span
          class="text-xs font-bold uppercase tracking-widest text-slate-400"
        >
          Escrow State
        </span>
        <span
          class="status-badge status-badge--green"
          data-testid="escrow-status-badge"
        >
          <span>
            Settled
          </span>
        </span>
      </div>
      <div
        class="mt-8"
      >
        <div
          class="flex items-baseline gap-2"
        >
          <span
            class="text-5xl font-black tracking-tight text-slate-900"
          >
            0.00
          </span>
          <span
            class="text-xl font-bold text-slate-400"
          >
            XLM
          </span>
        </div>
        <p
          class="mt-1 text-sm font-medium text-slate-500"
        >
          Current Balance
        </p>
      </div>
      <div
        class="mt-8 flex items-center justify-between border-t border-slate-100 pt-6"
      >
        <div
          class="flex items-center gap-2 text-slate-400"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-refresh-cw h-3 w-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 12a9 9 0 0 1 9-9 9.75 9.75 0 0 1 6.74 2.74L21 8"
            />
            <path
              d="M21 3v5h-5"
            />
            <path
              d="M21 12a9 9 0 0 1-9 9 9.75 9.75 0 0 1-6.74-2.74L3 16"
            />
            <path
              d="M8 16H3v5"
            />
          </svg>
          <span
            class="text-[11px] font-semibold uppercase tracking-wider"
          >
            Updated 0 seconds ago
          </span>
        </div>
        <div
          class="h-1.5 w-1.5 rounded-full bg-emerald-500 shadow-[0_0_8px_rgba(16,185,129,0.6)]"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
